public class OnlineBank extends SavingPaymentTool {
}
