public class SavingPaymentTool extends PaymentTool {
}
